--- a/portfolio_website.html
+++ b/portfolio_website.html
@@ -44,28 +44,28 @@
     <h1>Connor Moroney</h1>
     <p>Rising Sophomore | Electrical & Computer Engineering</p>
     <p>
-      <a href="mailto:your.email@example.com">your.email@example.com</a> |
-      <a href="https://github.com/yourusername">GitHub</a> |
-      <a href="https://linkedin.com/in/yourusername">LinkedIn</a>
+      <a href="mailto:cm1534@xyz.edu">cm1534@xyz.edu</a> |
+      <a href="https://github.com/CM1534">GitHub</a> |
+      <a href="https://linkedin.com/in/cm1534">LinkedIn</a>
     </p>
   </header>
 
   <section class="project">
     <h2>Sensor Data Logger</h2>
     <p>Reads real-time sensor data from Arduino via serial port using C and Python. Logs data and optionally plots it with matplotlib.</p>
-    <a href="https://github.com/yourusername/sensor-logger" target="_blank">View on GitHub</a>
+    <a href="https://github.com/CM1534/sensor-logger" target="_blank">View on GitHub</a>
   </section>
 
   <section class="project">
     <h2>TCP Chat App</h2>
     <p>A command-line chat app built in Python using TCP sockets and threading to allow simultaneous send/receive.</p>
-    <a href="https://github.com/yourusername/tcp-chat-app" target="_blank">View on GitHub</a>
+    <a href="https://github.com/CM1534/tcp-chat-app" target="_blank">View on GitHub</a>
   </section>
 
   <section class="project">
     <h2>PID Controller Simulator</h2>
     <p>Simulates a PID-controlled system with a visual plot of system response. Parameters can be tuned via code or optional UI.</p>
-    <a href="https://github.com/yourusername/pid-sim" target="_blank">View on GitHub</a>
+    <a href="https://github.com/CM1534/pid-sim" target="_blank">View on GitHub</a>
   </section>
 
   <footer>
