--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
     <h1>Connor Moroney</h1>
     <p>Rising Sophomore | Electrical & Computer Engineering</p>
     <p>
-      <a href="mailto:cm1534@xyz.edu">cm1534@xyz.edu</a> |
+      <a href="mailto:cmoroney@andrew.cmu.edu">cmoroney@andrew.cmu.edu</a> |
       <a href="https://github.com/CM1534">GitHub</a> |
-      <a href="https://linkedin.com/in/cm1534">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/connormoroneyprofile/">LinkedIn</a>
     </p>
   </header>
 
   <section class="project">
-    <h2>Sensor Data Logger</h2>
-    <p>Reads real-time sensor data from Arduino via serial port using C and Python. Logs data and optionally plots it with matplotlib.</p>
-    <a href="https://github.com/CM1534/sensor-logger" target="_blank">View on GitHub</a>
+    <h2>Project1</h2>
+    <p>project1's description TBD</p>
+    <a href="LINK" target="_blank">View on GitHub</a>
   </section>
 
   <section class="project">
-    <h2>TCP Chat App</h2>
-    <p>A command-line chat app built in Python using TCP sockets and threading to allow simultaneous send/receive.</p>
-    <a href="https://github.com/CM1534/tcp-chat-app" target="_blank">View on GitHub</a>
+    <h2>Project2</h2>
+    <p>project2's description TBD</p>
+    <a href="LINK" target="_blank">View on GitHub</a>
   </section>
 
   <section class="project">
-    <h2>PID Controller Simulator</h2>
-    <p>Simulates a PID-controlled system with a visual plot of system response. Parameters can be tuned via code or optional UI.</p>
-    <a href="https://github.com/CM1534/pid-sim" target="_blank">View on GitHub</a>
+    <h2>Project3</h2>
+    <p>project3's description TBD</p>
+    <a href="LINK" target="_blank">View on GitHub</a>
   </section>
 
   <footer>
