--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <body>
   <header>
     <h1>Connor Moroney</h1>
-    <p>Rising Sophomore | Electrical & Computer Engineering</p>
+    <p>Class of 2028 | Electrical & Computer Engineering</p>
+    <p>Carnegie Mellon University</p>
     <p>
       <a href="mailto:cmoroney@andrew.cmu.edu">cmoroney@andrew.cmu.edu</a> |
       <a href="https://github.com/CM1534">GitHub</a> |
