--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 2rem;
-      background-color: #f4f4f4;
+      background-color: #7b8ead;
     }
     header {
       text-align: center;
