--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 2rem;
-      background-color: #7b8ead;
+      background-color: #bac8de;
     }
     header {
       text-align: center;
@@ -48,6 +48,10 @@
       <a href="mailto:cmoroney@andrew.cmu.edu">cmoroney@andrew.cmu.edu</a> |
       <a href="https://github.com/CM1534">GitHub</a> |
       <a href="https://www.linkedin.com/in/connormoroneyprofile/">LinkedIn</a>
+    </p>
+    <p>
+      <a href="resume.pdf" download style="text-decoration:none; padding:8px 15px; 
+    background:#3366cc; color:white; border-radius:5px;">Download Resume</a>
     </p>
   </header>
 
