--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 2rem;
-      background-color: #bac8de;
+      background-color: #d4d4d4;
     }
     header {
       text-align: center;
@@ -50,8 +50,8 @@
       <a href="https://www.linkedin.com/in/connormoroneyprofile/">LinkedIn</a>
     </p>
     <p>
-      <a href="resume.pdf" download style="text-decoration:none; padding:8px 15px; 
-    background:#3366cc; color:white; border-radius:5px;">Download Resume</a>
+      <a href="Resume2425.pdf" download style="text-decoration:none; padding:8px 15px; 
+      background:#3366cc; color:white; border-radius:5px;">Download Resume</a>
     </p>
   </header>
 
