--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
       cursor: pointer;
       background-color: #555;
       color: white;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, transform 0.1s;
     }
     nav button:hover {
       background-color: #777;
+    }
+    nav button:active {
+      transform: scale(0.96);
     }
     .project, .about {
       background: #f8f8f8;
@@ -84,6 +87,9 @@
     #toggle-dark:hover {
       background-color: #666;
     }
+    #toggle-dark:active {
+      transform: scale(0.96);
+    }
     .tab-content {
       display: none;
       opacity: 0;
@@ -109,7 +115,7 @@
       <a href="https://www.linkedin.com/in/connormoroneyprofile/">LinkedIn</a>
     </p>
     <p>
-      <a href="Resume2425.pdf" download style="text-decoration:none; padding:8px 15px; background:#555; color:white; border-radius:5px;">Download Resume</a>
+      <a href="Resume2425.pdf" download style="text-decoration:none; padding:8px 15px; background:#555; color:white; border-radius:5px; transition: background-color 0.3s;">Download Resume</a>
     </p>
   </header>
 
