--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     nav button:active {
       transform: scale(0.96);
     }
-    .project, .about {
+    .project, .about, .resume {
       background: #f8f8f8;
       border-radius: 10px;
       padding: 1.5rem;
@@ -57,7 +57,8 @@
       color: #eee;
     }
     .dark-mode .project,
-    .dark-mode .about {
+    .dark-mode .about,
+    .dark-mode .resume {
       background-color: #2c2c2c;
       box-shadow: none;
     }
@@ -101,6 +102,12 @@
       position: relative;
       min-height: 400px;
     }
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
@@ -122,6 +129,7 @@
   <nav>
     <button onclick="showTab('about')">About</button>
     <button onclick="showTab('projects')">Projects</button>
+    <button onclick="showTab('resume')">Resume</button>
   </nav>
 
   <div class="container">
@@ -145,6 +153,11 @@
         <h2>Project3</h2>
         <a href="LINK" target="_blank">View on GitHub</a>
       </div>
+    </section>
+
+    <section id="resume" class="resume tab-content">
+      <h2>My Resume</h2>
+      <iframe src="Resume2425.pdf"></iframe>
     </section>
   </div>
 
