--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div class="container">
     <section id="about" class="about tab-content active">
       <h2>About Me</h2>
-      <p>[Add a short paragraph about your interests, experience, and what you're looking for. This could include technical skills, areas of interest in ECE, and goals for internships or research.]</p>
+      <p>[Description]</p>
     </section>
 
     <section id="projects" class="tab-content">
