--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <button id="toggle-dark">Dark Mode</button>
   <header>
     <h1>Connor Moroney</h1>
-    <p>Class of 2028 | Electrical & Computer Engineering</p>
-    <p>Carnegie Mellon University</p>
+    <p>Carnegie Mellon University | Class of 2028 </p>
+    <p>Electrical & Computer Engineering | Engineering & Public Policy</p>
     <p>
       <a href="mailto:cmoroney@andrew.cmu.edu">cmoroney@andrew.cmu.edu</a> |
       <a href="https://github.com/CM1534">GitHub</a> |
