--- a/index.html
+++ b/index.html
@@ -135,22 +135,22 @@
   <div class="container">
     <section id="about" class="about tab-content active">
       <h2>About Me</h2>
-      <p>[Description]</p>
+      <p>Hi, I'm Connor, a sophomore ECE and EPP student at CMU. This is my website where I put my projects and resume.</p>
     </section>
 
     <section id="projects" class="tab-content">
       <div class="project">
-        <h2>Project1</h2>
+        <h2>Raycasting Project from F24</h2>
+        <a href="https://github.com/CM1534/TermProject24" target="_blank">View on GitHub</a>
+      </div>
+
+      <div class="project">
+        <h2>Coming Soon</h2>
         <a href="LINK" target="_blank">View on GitHub</a>
       </div>
 
       <div class="project">
-        <h2>Project2</h2>
-        <a href="LINK" target="_blank">View on GitHub</a>
-      </div>
-
-      <div class="project">
-        <h2>Project3</h2>
+        <h2>Coming Soon</h2>
         <a href="LINK" target="_blank">View on GitHub</a>
       </div>
     </section>
