--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
     <section id="projects" class="tab-content">
       <div class="project">
         <h2>Raycasting Project from F24</h2>
+        <img src="TPProjectThumbnail.PNG" alt="Image from game" style="width:100%; max-width:600px; border-radius:8px; margin: 1rem 0;" />
+        <p><a href="https://youtu.be/m4FA73ps2fM" target="_blank">Watch Demo Video</a></p>
         <a href="https://github.com/CM1534/TermProject24" target="_blank">View on GitHub</a>
       </div>
 
