--- a/index.html
+++ b/index.html
@@ -5,87 +5,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Connor Moroney - Portfolio</title>
   <style>
+    :root {
+      --primary: #1f2937;
+      --accent: #3b82f6;
+      --light-bg: #f9fafb;
+      --dark-bg: #111827;
+      --light-card: #ffffff;
+      --dark-card: #1f2937;
+      --text-light: #111;
+      --text-dark: #f3f4f6;
+      --shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 2rem;
-      background-color: #eeeeee;
-      color: #222;
+      background-color: var(--light-bg);
+      color: var(--text-light);
       transition: background-color 0.3s, color 0.3s;
+      line-height: 1.6;
     }
+
     header {
       text-align: center;
-      padding-bottom: 1rem;
+      margin-bottom: 2rem;
     }
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
+      margin-bottom: 0.5rem;
     }
+    header p, header a {
+      font-size: 1.1rem;
+    }
+
     nav {
       text-align: center;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
     }
     nav button {
-      padding: 0.5rem 1rem;
+      padding: 0.6rem 1.2rem;
       margin: 0 0.5rem;
       border: none;
-      border-radius: 5px;
+      border-radius: 9999px;
       cursor: pointer;
-      background-color: #555;
+      background-color: var(--primary);
       color: white;
+      font-weight: bold;
       transition: background-color 0.3s, transform 0.1s;
     }
     nav button:hover {
-      background-color: #777;
+      background-color: var(--accent);
     }
     nav button:active {
-      transform: scale(0.96);
+      transform: scale(0.97);
     }
+
     .project, .about, .resume {
-      background: #f8f8f8;
-      border-radius: 10px;
-      padding: 1.5rem;
+      background: var(--light-card);
+      border-radius: 1rem;
+      padding: 2rem;
       margin-bottom: 2rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      box-shadow: var(--shadow);
     }
+
     footer {
       text-align: center;
-      margin-top: 2rem;
       color: #666;
+      margin-top: 3rem;
     }
+
     .dark-mode {
-      background-color: #1f1f1f;
-      color: #eee;
+      background-color: var(--dark-bg);
+      color: var(--text-dark);
     }
     .dark-mode .project,
     .dark-mode .about,
     .dark-mode .resume {
-      background-color: #2c2c2c;
-      box-shadow: none;
+      background-color: var(--dark-card);
     }
     .dark-mode a {
-      color: #66aaff;
+      color: #60a5fa;
     }
+
     #toggle-dark {
       position: fixed;
       top: 10px;
       right: 10px;
-      padding: 8px 12px;
+      padding: 0.5rem 1rem;
       cursor: pointer;
-      background-color: #444;
+      background-color: var(--primary);
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 9999px;
+      font-weight: bold;
       transition: background-color 0.3s;
     }
     #toggle-dark:hover {
-      background-color: #666;
+      background-color: var(--accent);
     }
     #toggle-dark:active {
-      transform: scale(0.96);
+      transform: scale(0.97);
     }
+
     .tab-content {
       position: absolute;
-      top: 140px;
+      top: 80px;
       left: 0;
       width: 100%;
       opacity: 0;
@@ -98,15 +123,26 @@
       opacity: 1;
       transform: translateX(0);
     }
+
     .container {
       position: relative;
       min-height: 400px;
+      margin-top: -1rem;
     }
+
     iframe {
       width: 100%;
       height: 600px;
       border: none;
-      border-radius: 10px;
+      border-radius: 1rem;
+    }
+
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -122,7 +158,7 @@
       <a href="https://www.linkedin.com/in/connormoroneyprofile/">LinkedIn</a>
     </p>
     <p>
-      <a href="Resume2425.pdf" download style="text-decoration:none; padding:8px 15px; background:#555; color:white; border-radius:5px; transition: background-color 0.3s;">Download Resume</a>
+      <a href="Resume2425.pdf" download style="padding: 0.6rem 1.2rem; background: var(--primary); color: white; border-radius: 9999px; font-weight: bold; display: inline-block;">Download Resume</a>
     </p>
   </header>
 
@@ -141,7 +177,7 @@
     <section id="projects" class="tab-content">
       <div class="project">
         <h2>Raycasting Project from F24</h2>
-        <img src="TPProjectThumbnail.PNG" alt="Image from game" style="width:100%; max-width:600px; border-radius:8px; margin: 1rem 0;" />
+        <img src="TPProjectThumbnail.PNG" alt="Image from game" style="width:100%; max-width:600px; border-radius:0.75rem; margin: 1rem 0;" />
         <p><a href="https://youtu.be/m4FA73ps2fM" target="_blank">Watch Demo Video</a></p>
         <a href="https://github.com/CM1534/TermProject24" target="_blank">View on GitHub</a>
       </div>
