--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
 
     <section id="projects" class="tab-content">
       <div class="project">
-        <h2>Raycasting Project from F24</h2>
+        <h2>Raycasting Project from F24 (Python)</h2>
         <img src="TPProjectThumbnail.PNG" alt="Image from game" style="width:100%; max-width:600px; border-radius:0.75rem; margin: 1rem 0;" />
         <p><a href="https://youtu.be/m4FA73ps2fM" target="_blank">Watch Demo Video</a></p>
         <a href="https://github.com/CM1534/TermProject24" target="_blank">View on GitHub</a>
       </div>
 
       <div class="project">
-        <h2>Coming Soon</h2>
-        <a href="LINK" target="_blank">View on GitHub</a>
+        <h2>Generic ML Project using pandas and sklearn (Python)</h2>
+        <a href="https://github.com/CM1534/GenericMLModel" target="_blank">View on GitHub</a>
       </div>
 
       <div class="project">
